05.services/yml/05、netcorek8s-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: netcorek8ssvc-nodeport
spec:
  type: NodePort
  ports:
  - port: 13300
    targetPort: 43300
    nodePort: 32000
  selector:
    apprs: netcorek8s
