05.services/yml/05、netcorek8s-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: netcorek8ssvc
spec:
  ports:
  - port: 13300
    targetPort: 43300
  selector:
    apprs: netcorek8s
