05.services/yml/05、netcorek8s-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netcorek8s
spec:
  tls: 
  - hosts: 
    - netcorek8s.refactor.com
    secretName: tls-secret
  rules:
  - host: netcorek8s.refactor.com
    http:
      paths:
      - path: /
        backend:
          serviceName: netcorek8ssvc-nodeport
          servicePort: 13300
